Fix scrolling bugs (sticky header and overflow)

--- a/client/public/styles.less
+++ b/client/public/styles.less
@@ -1,6 +1,4 @@
 @import "loading-wheel.css";
-@import "../node_modules/react-slidedown/lib/slidedown.css";
-
 
 @primary-color: #FA9539;
 @secondary-color: #32BCDB;
@@ -25,77 +23,82 @@ html, body {
   }
 }
 
-
-
 .page-container {
   width: 100%;
   height: 100%;
   display: flex;
   background-color: @background-color;
 
-  & .header > .navbar {
-    width: 100%;
-    background-color: @primary-color;
-    height: 85px;
-    display: flex;
-    flex-direction: row;
+  & .header {
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+    z-index: 100;
 
-    & .navbar-title {
-      font-size: 36px;
-      font-weight: 700;
-      padding-left: 50px;
-      width: fit-content;
-      margin-top: auto;
-      margin-bottom: auto;
-      color: white;
-    }
-
-    & .navbar-nav {
-      margin-top: auto;
-      margin-bottom: auto;
-      list-style-type: none;
-
-      & .nav-item {
-        width: 100px;
-        margin-left: auto;
-        margin-right: auto;
-        display: flex;
-
-        & .nav-button {
-          padding: 10px;
-          width: 100%;
-          text-align: center;
-          color: white;
-          text-decoration: unset;
-        }
-
-        &:hover {
-          background-color: @dark-primary-color;
-          cursor: pointer;
-          border-radius: 5px;
-        }
-      }
-    }
-
-    & .profile-dropdown {
+    & .navbar {
+      width: 100%;
+      background-color: @primary-color;
+      height: 85px;
       display: flex;
-      margin-left: auto;
-      padding-right: 50px;
+      flex-direction: row;
 
-      & .user-profile {
+      & .navbar-title {
+        font-size: 36px;
+        font-weight: 700;
+        padding-left: 50px;
+        width: fit-content;
         margin-top: auto;
         margin-bottom: auto;
+        color: white;
+      }
 
-        & img {
-          vertical-align: middle;
-          height: 54px;
-          width: 54px;
-          border-radius: 50%;
-          transition: all .2s ease-in-out;
+      & .navbar-nav {
+        margin-top: auto;
+        margin-bottom: auto;
+        list-style-type: none;
+
+        & .nav-item {
+          width: 100px;
+          margin-left: auto;
+          margin-right: auto;
+          display: flex;
+
+          & .nav-button {
+            padding: 10px;
+            width: 100%;
+            text-align: center;
+            color: white;
+            text-decoration: unset;
+          }
 
           &:hover {
-            border: 2px solid @dark-secondary-color;
-            transform: scale(1.15);
+            background-color: @dark-primary-color;
+            cursor: pointer;
+            border-radius: 5px;
+          }
+        }
+      }
+
+      & .profile-dropdown {
+        display: flex;
+        margin-left: auto;
+        padding-right: 50px;
+
+        & .user-profile {
+          margin-top: auto;
+          margin-bottom: auto;
+
+          & img {
+            vertical-align: middle;
+            height: 54px;
+            width: 54px;
+            border-radius: 50%;
+            transition: all .2s ease-in-out;
+
+            &:hover {
+              border: 2px solid @dark-secondary-color;
+              transform: scale(1.15);
+            }
           }
         }
       }
@@ -110,7 +113,7 @@ html, body {
         min-width: 190px;
         border-radius: 0 0 0 5px;
 
-        &>li {
+        & > li {
           & .glyphicon {
             margin-top: auto;
             margin-bottom: auto;
@@ -142,7 +145,6 @@ html, body {
         display: block;
       }
     }
-
   }
 
   & div.login-container {
@@ -166,63 +168,66 @@ html, body {
       color: @dark-primary-color;
     }
   }
+}
 
-  & .basic-page{
-    width: 100%;
+& .basic-page {
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  padding-bottom: 20px;
 
-    & .home-page {
+  & .home-page {
 
-      & h3 {
-        text-align: center;
-      }
+    & h3 {
+      text-align: center;
+    }
 
-      & .level-list {
+    & .level-list {
 
-        & .list-group {
-          margin-bottom: 0;
+      & .list-group {
+        margin-bottom: 0;
 
-          & .list-item-container {
+        & .list-item-container {
 
-            & .list-item-header {
+          & .list-item-header {
+            border: 0;
+
+            &:hover {
+              background-color: @light-grey-color;
+              cursor: pointer;
+            }
+          }
+
+          & .list-item-details {
+            background-color: @light-grey-color;
+            display: flex;
+
+            & .list-item-statement {
+              margin-bottom: 0;
+              border-radius: 0;
               border: 0;
-
-              &:hover {
-                background-color: @light-grey-color;
-                cursor: pointer;
-              }
+              -webkit-box-shadow: none;
+              box-shadow: none;
+              background-color: unset;
+              text-align: justify;
             }
 
-            & .list-item-details {
-              background-color: @light-grey-color;
-              display: flex;
-
-              & .list-item-statement {
-                margin-bottom: 0;
-                border-radius: 0;
-                border: 0;
-                -webkit-box-shadow: none;
-                box-shadow: none;
-                background-color: unset;
-                text-align: justify;
-              }
-
-              & button.btn {
-                margin: auto;
-                width: 72px;
-                height: 72px;
-              }
+            & button.btn {
+              margin: auto;
+              width: 72px;
+              height: 72px;
             }
           }
         }
       }
+    }
 
-      & button.create-level-button {
-        position: fixed;
-        bottom: 5%;
-        right: 5%;
-        width: 64px;
-        height: 64px;
-      }
+    & button.create-level-button {
+      position: fixed;
+      bottom: 5%;
+      right: 5%;
+      width: 64px;
+      height: 64px;
     }
   }
 }
@@ -245,7 +250,7 @@ html, body {
   }
 
   &:focus {
-    outline: none!important;
+    outline: none !important;
   }
 
   &:active {
